[package]
name = "runiverse"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MattBlack85/libuniverse/"
authors = ["Mattia Procopio"]
readme = "README.md"
description = "A pure and safe Rust library to make astronomical calculations and solve astronomical algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "runiverse"
path = "src/lib.rs"
crate-type = ["dylib", "lib"]

[dependencies]
libmath = "0.2"
regex = "1.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "julian_day"
harness = false

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "dynamical_time"
harness = false